# Nova9

./: .gitattributes  Cargo.toml  Justfile  NOTES.md
client/: Cargo.toml
client/assets/: materials.manifest.ron
client/assets/colliders/ships/: bomber_01_collision.glb  (+31 more)
client/assets/shaders/: spacestation.wgsl
client/src/: main.rs  materials.rs  player.rs  ship.rs  spacetimedb.rs  world.rs
client/src/assets_loader/: assets.rs  custom_loader.rs  mod.rs
client/src/bindings/: asteroid_table.rs  asteroid_type.rs  asteroids_table.rs  mod.rs  on_connected_reducer.rs  on_disconnected_reducer.rs  player_enter_ship_reducer.rs  player_leave_ship_reducer.rs  player_location_table.rs  player_location_type.rs  player_move_ship_reducer.rs  player_ready_reducer.rs  player_spawn_ship_reducer.rs  player_table.rs  player_type.rs  players_table.rs  ship_location_table.rs  ship_location_type.rs  ship_locations_table.rs  ship_pilot_table.rs  ship_pilot_type.rs  ship_pilots_table.rs  ship_table.rs  ship_type.rs  ship_type_table.rs  ship_type_type.rs  ship_types_table.rs  ships_table.rs  station_rotation_update_table.rs  station_rotation_update_type.rs  station_table.rs  station_type.rs  stations_table.rs  tmp_reducer.rs  world_update_stations_rotation_reducer.rs
client/src/local_player/: flycam.rs  lifecycle.rs  mod.rs  ui.rs  world_interactions.rs
client/src/misc/: follow_camera.rs  mod.rs
client/src/player/: mod.rs
client/src/shaders/: mod.rs
client/src/ships/: components.rs  controls.rs  lifecycle.rs  location_updates.rs  mod.rs  resources.rs
client/src/world/: asteroids.rs  mod.rs  stations.rs
(+647 files in other folders)
