[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.32.0"
bevy_asset_loader = { version = "0.23.0", features = [
    "3d",
    "standard_dynamic_assets",
    "progress_tracking",
] }
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
bevy_enhanced_input = "0.15.1"
bevy_flycam = "0.16.1"
bevy_spacetimedb = "0.6.1"
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
serde = "1.0.219"
spacetimedb-sdk = "1.2.0"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
